# portfolio

./: .cortex.json  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
.claude/plans/: portfolio-bootstrap.md
.claude/sessions/: 2026-04-26-pdf-importer-yfinance-fallback.md  2026-04-26-phase-a-wrap-up.md  2026-04-26-portfolio-zero-to-prod.md  2026-04-26-ux-redesign-phase-a.md  2026-04-27-finish-phase-a-ux.md  2026-04-27-phase-a-finish-ux-redesign.md
.github/workflows/: test.yml
db/init/: 01_public_schema.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
pt/: __init__.py  cli.py  cli_asset.py  cli_db.py  cli_holdings.py  cli_perf.py  cli_portfolio.py  cli_sync.py  cli_tx.py  logging.py
pt/api/: app.py  middleware.py
pt/data/: coingecko.py  finnhub.py  frankfurter.py  marketaux.py  store.py  twelve_data.py  yahoo.py
tests/: conftest.py  test_api.py  test_api_benchmarks.py  test_api_news.py  test_api_phase_a2.py  test_cli_perf.py  test_cli_smoke.py  test_cli_sync.py  test_data_coingecko.py  test_data_frankfurter.py  test_data_store.py  test_data_twelve_data.py  test_data_yahoo.py  test_db_assets.py  test_db_holdings.py  test_db_portfolios.py  test_db_prices.py  test_db_transactions.py  test_jobs_daily.py  test_jobs_snapshots.py  test_pdf_import.py  test_perf_cost_basis.py  test_perf_metrics.py  test_perf_money.py  test_perf_mwr.py  test_perf_periods.py  test_perf_twr.py  test_smoke.py
(+84 files in other folders)
